--- a/moneyapp/src/main/resources/templates/uneseniTrosak.html
+++ b/moneyapp/src/main/resources/templates/uneseniTrosak.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html 
+	xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<title>Prvi Labos</title>
+	<title>Treci Labos</title>
 </head>
 <body>
     <div style="text-align: center" sec:authorize="isAuthenticated()">
