--- a/moneyapp/bin/main/templates/admin.html
+++ b/moneyapp/bin/main/templates/admin.html
@@ -14,15 +14,13 @@
             <input type="submit" value="Logout">
         </form>
     </div>
-<div class="col-md-4">
-<h1>Trošak unesen!</h1>
-<p th:text="'Uspješno ste unijeli trošak ' + ${trosak.naziv} + ' u iznosu od ' + ${trosak.iznos} + ' kn.'" />
-<p th:text="'Trošak je unesen pod kategoriju ' + ${trosak.vrstaTroska} + ' na datum ' + ${date} + '.'" />
-<p th:text="'Stanje u novčaniku ' + ${novcanik.naziv} + ' tipa ' + ${novcanik.vrstaNovcanika} + ' je ' + ${suma} + ' kn.'" />
-
-	<a sec:authorize="hasRole('ROLE_ADMIN')" class="col-md-2" th:href="@{/troskovi/isprazniNovcanik}">Isprazni novčanik</a>
+	<p>Trenutni user <span sec:authentication="name">Korisnik</span></p>
+	<p>Njegove role:</p>
+	<ul>
+		<li th:each="rola : ${role}" 
+	      	th:value="${rola}" 
+	 	    th:text="${rola}"></li>
+	</ul>
 	<a class="col-md-2" th:href="@{/troskovi/novitrosak}">Povratak</a>
-
-</div>
 </body>
 </html>
