--- a/moneyapp/src/main/resources/templates/index.html
+++ b/moneyapp/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html 	
+	xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	<meta charset="UTF-8">
 	<title>Prvi Labos</title>
 </head>
@@ -8,12 +9,13 @@
     <div style="text-align: center" sec:authorize="isAuthenticated()">
         <form method="POST" th:action="@{/logout}">
             Ulogirani ste kao <span sec:authentication="name">Korisnik</span>.
-            <input type="submit" value="Logout" class="btn btn-danger gumb">
+            <input type="submit" value="Logout">
         </form>
     </div>
 	<div>
 	<a th:href="@{/troskovi/novitrosak}">Unesi novi trošak</a>
 	</div>
+
 	
 </body>
 </html>
