--- a/moneyapp/src/main/resources/templates/trosak.html
+++ b/moneyapp/src/main/resources/templates/trosak.html
@@ -44,6 +44,8 @@
 	  <input type="submit" value="Unesi trošak">
 	</form>
 	</div>
+	<a sec:authorize="hasRole('ROLE_ADMIN')"
+			th:href="@{/troskovi/role}">Pogledaj role</a>
 </div>
 </body>
 </html>
