--- a/moneyapp/bin/main/templates/trosak.html
+++ b/moneyapp/bin/main/templates/trosak.html
@@ -53,6 +53,8 @@
 	  </div>
 	  <input type="submit" value="Unesi trošak">
 	  <a th:href="@{/troskovi/novinovcanik}">Dodaj novcanik</a>
+	  <a th:href="@{/troskovi/trazitrosak}">Trazi trosak</a>
+
 	</form>
 	</div>
 	<!-- <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/troskovi/role}">Pogledaj role</a>  -->
