--- a/moneyapp/bin/main/templates/index.html
+++ b/moneyapp/bin/main/templates/index.html
@@ -7,12 +7,33 @@
 <body>
     <div style="text-align: center" sec:authorize="isAuthenticated()">
         <form method="POST" th:action="@{/logout}">
-            Ulogirani ste kao <span sec:authentication="name">Korisnik</span>.
+            <p><span th:text="#{msg.login.loggedIn}"></span><span> </span><span sec:authentication="name"></span></p>
             <input type="submit" value="Logout" class="btn btn-danger gumb">
         </form>
+            <select id="locales"> 
+    	<option th:value="hr"
+                    th:selected="${#locale.language == 'hr'}"
+                    th:text="#{msg.lang.hr}"></option>
+    	<option th:value="en"
+                    th:selected="${#locale.language == 'en'}"
+                    th:text="#{msg.lang.en}"></option>
+    
+    </select>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script th:inline="javascript">
+            $(document).ready(function() {
+                $("#locales").change(function () {
+                    var selectedOption = $('#locales').val();
+                    if (selectedOption != ''){
+                        window.location.replace('?language=' + selectedOption);
+                    }
+                });
+            });
+    </script>
+
 	<div>
-	<a th:href="@{/troskovi/novitrosak}">Unesi novi trošak</a>
+	<a th:href="@{/troskovi/novitrosak}" th:text="#{msg.new.enterNewExpense}">Unesi novi trošak</a>
 	</div>
 	
 </body>
