--- a/moneyapp/bin/main/templates/traziTrosak.html
+++ b/moneyapp/bin/main/templates/traziTrosak.html
@@ -11,28 +11,48 @@
 
 	<div style="text-align: center" sec:authorize="isAuthenticated()">
         <form method="POST" th:action="@{/logout}">
-            Ulogirani ste kao <span sec:authentication="name">Korisnik</span>.
-            <input type="submit" value="Logout">
+            <p><span th:text="#{msg.login.loggedIn}"></span><span> </span><span sec:authentication="name"></span></p>
+            <input type="submit" value="Logout" >
         </form>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script th:inline="javascript">
+            $(document).ready(function() {
+                $("#locales").change(function () {
+                    var selectedOption = $('#locales').val();
+                    if (selectedOption != ''){
+                        window.location.replace('?language=' + selectedOption);
+                    }
+                });
+            });
+    </script>
+    <select id="locales"> 
+    	<option th:value="hr"
+                    th:selected="${#locale.language == 'hr'}"
+                    th:text="#{msg.lang.hr}"></option>
+    	<option th:value="en"
+                    th:selected="${#locale.language == 'en'}"
+                    th:text="#{msg.lang.en}"></option>
+    
+    </select>
     <div class="col-md-6">
 		<div class="col-md-12">
 			<img class="col-md-3" th:src="@{/images/piggy.png}">
 			<h1 class="naslov col-md-3">Money Saver</h1>
 		</div>
 		<form th:action="@{/troskovi/trazitrosak}" method="post">
-			<input type="text" name="imeTroska" placeholder="Naziv troška">
-			<input type="submit" value="Pretrazi">
+			<input type="text" name="imeTroska">
+			<input type="submit" th:value="#{msg.show.search}">
 		</form>
 	</div>
 	<div class="col-md-12">
 		<table class="table">
 			<thead>
 				<th>ID</th>
-				<th>Naziv</th>
-				<th>Datum</th>
-				<th>Iznos</th>
-				<th>Vrsta</th>
+				<th th:text="#{msg.show.name}">Naziv</th>
+				<th th:text="#{msg.show.date}">Datum</th>
+				<th th:text="#{msg.show.amount}">Iznos</th>
+				<th th:text="#{msg.show.type}">Vrsta</th>
 			</thead>
 			<tbody>
 				<tr th:each="trosak : ${listaTrazenihTroskova}">
@@ -45,7 +65,7 @@
 			</tbody>
 		</table>
 	</div>
-	<a class="col-md-2" th:href="@{/troskovi/novitrosak}">Povratak</a>
+	<a class="col-md-2" th:href="@{/troskovi/novitrosak}" th:text="#{msg.show.back}">Povratak</a>
 	
 </body>
 </html>
