--- a/moneyapp/src/main/resources/templates/newwallet.html
+++ b/moneyapp/src/main/resources/templates/newwallet.html
@@ -7,29 +7,49 @@
 	<title>MoneyApp</title>
 </head>
 <body>
-	<div style="text-align: center" sec:authorize="isAuthenticated()">
+    <div style="text-align: center" sec:authorize="isAuthenticated()">
         <form method="POST" th:action="@{/logout}">
-            Ulogirani ste kao <span sec:authentication="name">Korisnik</span>.
-            <input type="submit" value="Logout">
+            <p><span th:text="#{msg.login.loggedIn}"></span><span> </span><span sec:authentication="name"></span></p>
+            <input type="submit" value="Logout" >
         </form>
     </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script th:inline="javascript">
+            $(document).ready(function() {
+                $("#locales").change(function () {
+                    var selectedOption = $('#locales').val();
+                    if (selectedOption != ''){
+                        window.location.replace('?language=' + selectedOption);
+                    }
+                });
+            });
+    </script>
+    <select id="locales"> 
+    	<option th:value="hr"
+                    th:selected="${#locale.language == 'hr'}"
+                    th:text="#{msg.lang.hr}"></option>
+    	<option th:value="en"
+                    th:selected="${#locale.language == 'en'}"
+                    th:text="#{msg.lang.en}"></option>
+    
+    </select>
 <div class="col-md-6">
 	<div class="col-md-12">
 		<img class="col-md-3" th:src="@{/images/piggy.png}">
 		<h1 class="naslov col-md-3">Money Saver</h1>
 	</div>
 	<div class="col-md-12">
-	<h2>Unos novog novcanika</h2>
+	<h2 th:text="#{msg.wnew.enterNewWallet}">Unos novog novcanika</h2>
 	<form method="POST" th:object="${transportnov}" th:action="@{/troskovi/novinovcanik}">
 	  <div class="form-group">
-	    <label for="naziv">Naziv:</label>
-	    <input type="text" class="form-control" id="naziv" placeholder="Unesite ime novcanika" th:field="${transportnov.ime}">
+	    <label for="naziv" th:text="#{msg.wnew.name}">Naziv:</label>
+	    <input type="text" class="form-control" id="naziv" th:field="${transportnov.ime}">
 	  	<p class="alert alert-warning" th:if="${#fields.hasErrors('ime')}" th:errors="*{ime}">Krivi unos imena</p>
 	  </div>
 	  <div class="form-group">
-	    <label for="vrstaTroska">Vrsta novcanika:</label>
+	    <label for="vrstaTroska" th:text="#{msg.wnew.type}">Vrsta novcanika:</label>
 	    <select th:field="*{tipNovcanika}" class="form-control">
-			<option value="" hidden="hidden">------ Odaberite vrijednost ------</option>
+			<option value="" hidden="hidden" th:text="#{msg.new.selectValue}">------ Odaberite vrijednost ------</option>
 			<option th:each="vrsta : ${vrstenov}" 
 					th:value="${vrsta}" 
 					th:text="${vrsta}">
@@ -37,7 +57,7 @@
 		</select>
 	  </div>
 
-	  <input type="submit" value="Unesi novcanik">
+	  <input type="submit" th:value="#{msg.wnew.enter}">
 	</form>
 	</div>
 </div>
